--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,11 @@
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>React App</title>
+    <title>Mapa</title>
   </head>
   <body>
+    <script src="https://www.gstatic.com/firebasejs/5.0.0/firebase-app.js"></script>
+   
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     
